--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="og:description" content="elise bell nocturne 2020">
 <meta name="og:image" content="earlymoon.jpg">
 <meta name="og:site_name" content="how long can you just stay and look at the moon?">
+<meta name="og:url" content="https://elisemkbell.github.io/nocturne-2020/">
 
 
   <link rel="stylesheet" href="styles.css">
