--- a/tosee.html
+++ b/tosee.html
@@ -1,9 +1,10 @@
 
-<title>tired yet?</title>
+<title>you're almost home</title>
   <link rel="stylesheet" href="styles.css">
 
-
-<video src="Dhomewalk.mp4" controls loop></video>
+<center>
+<video src="Dhomewalk.mp4" controls loop width="500" height="325" frameborder="0"></video>
+</center>
 
 <p>are you done?</p>
 
